new re-structured layout

--- a/CoinStock/templates/index.html
+++ b/CoinStock/templates/index.html
@@ -22,10 +22,10 @@
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">CRYPTO-CURRENCIES</a>
+                    <a class="nav-link active" aria-current="page" href="#">crypto</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link active" href="#">STOCKS</a>
+                    <a class="nav-link active" href="{{ url_for('Market.stocks') }}">stocks</a>
                   </li>
                 </ul>
               </div>
