--- a/CoinStock/templates/layout.html
+++ b/CoinStock/templates/layout.html
@@ -4,16 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    {% block link %}
+    {% endblock %}
+    <title>{% block title %} {% endblock %} </title>
 </head>
 <body>
-    
-    {% if data  %}
-        <p> {{ data.price }} </p>
-
-    {% else %}
-        <p> NO dsta</p>
-    {% endif %}
-
+    {% block body %}
+    {% endblock %}
 </body>
 </html>
