--- a/CoinStock/templates/stocks.html
+++ b/CoinStock/templates/stocks.html
@@ -24,17 +24,17 @@
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-          <a class="navbar-brand" href="{{ url_for('index') }}">CoinStock</a>
+          <a class="navbar-brand" href="{{ url_for('Main.index') }}">CoinStock</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="{{ url_for('index') }}">crypto</a>
+                <a class="nav-link active" aria-current="page" href="{{ url_for('Main.index') }}">crypto</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="{{ url_for('socks') }}">stocks</a>
+                <a class="nav-link active" href="{{ url_for('Market.stocks') }}">stocks</a>
               </li>
             </ul>
           </div>
@@ -77,7 +77,7 @@
         const open_data = []
         const close_data = []
         var parsed = JSON.parse('{{data | tojson}}');
-
+        parsed.reverse();
         var counter = 0;
 
         for(let i = 0; i < parsed.length; i++){
